[workspace]
resolver = "2"
members = [
    ### OVERVIEW ###
    "overview",


    ### BINARIES ###
    # These crates directly relate to the CTL tool
    "brane-ctl",

    # These crates directly relate to the CLI tool
    "brane-cli",

    # These crates directly relate to the `branec` tool
    "brane-cc",


    ### SERVICES ###
    # These crates implement services for central nodes
    "brane-drv",
    "brane-plr",
    "brane-api",

    # These crates implement services for worker nodes
    "brane-job",
    "brane-reg",
    "brane-let",

    # These crates implement services that occur on any type of node
    "brane-prx",


    ### C-INTERFACES ###
    # These crates provide C-compatible interfaces to other libraries
    "brane-cli-c",


    ### LIBRARIES ###
    # These crates provide the full BraneScript/Bakery/... stack
    "brane-tsk",
    "brane-exe",
    "brane-ast",
    "brane-dsl",

    # These crates provide specifications / general implementations
    "brane-cfg",
    "brane-shr",
    "specifications",

    # # TODO
    # "brane-log",
]



[workspace.package]
version = "3.0.0"
edition = "2021"
authors = [ "Onno Valkering", "Tim Müller" ]
description = "The Brane Framework is a workflow execution system that is capable of dealing with sensitive dataset. Created for the [EPI project](https://enablingpersonalizedinterventions.nl)."
repository = "https://github.com/epi-project/brane"
documentation = "https://wiki.enablingpersonalizedinterventions.nl"
license = "Apache-2.0"

[workspace.dependencies]
# Lut99 Crates
humanlog = { git = "https://github.com/Lut99/humanlog-rs", tag = "v0.2.0" }
enum-debug = { git = "https://github.com/Lut99/enum-debug", tag = "v1.1.0", features = ["derive"] }
error-trace = { git = "https://github.com/Lut99/error-trace-rs", tag = "v3.0.0" }
transform = { git = "https://github.com/Lut99/transform-rs", tag = "v0.2.0" }
names = { git = "https://github.com/Lut99/names-rs", tag = "v0.1.0", default-features = false, features = [ "rand", "three-lowercase" ]}
download = { git = "https://github.com/Lut99/download-rs", tag = "v0.1.0", default-features = false, features = ["download"] }

[workspace.lints.clippy]
result_large_err = { level = "allow", priority = 1 }
suspicious = "deny"
