[package]
name = "brane-api"
version = { workspace = true }
authors = { workspace = true }
edition = "2018"

[dependencies]
async-compression = { version = "0.3.15", features = ["tokio","gzip"] }
bytes = "1"
chrono = "0.4"
clap = { version = "4.0.24", features = ["derive","env"] }
dotenvy = "0.15"
enum-debug = { git = "https://github.com/Lut99/enum-debug", features = ["derive"] }
env_logger = "0.10"
error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
futures = "0.3"
juniper = "0.15"
juniper_warp = "0.7"
# k8s-openapi = { version = "0.14", default-features = false, features = ["v1_23"] }
log = "0.4"
prost = "0.12"
rand = "0.8.5"
# rdkafka = { version = "0.31", features = ["cmake-build"] }
reqwest = { version = "0.11", features = ["rustls-tls-manual-roots"] }
scylla = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3.2"
time = "0.3"
tokio = { version = "1", default-features = false, features = ["macros", "rt", "signal"] }
tokio-stream = "0.1"
tokio-tar = "0.3.0"
tokio-util = { version = "0.7", features = ["codec"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
warp = "0.3"

brane-cfg      = { path = "../brane-cfg" }
brane-prx      = { path = "../brane-prx" }
brane-shr      = { path = "../brane-shr" }
specifications = { path = "../specifications" }
