[package]
name = "brane-api"
version = { workspace = true }
authors = { workspace = true }
edition = "2018"
rust-version = "1.74.1"

[dependencies]
async-compression = { version = "0.3.15", features = ["tokio","gzip"] }
bytes = "1.2.0"
chrono = "0.4.23"
clap = { version = "4.4.0", features = ["derive","env"] }
dotenvy = "0.15"
enum-debug = { git = "https://github.com/Lut99/enum-debug", features = ["derive"] }
env_logger = "0.10.0"
error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
futures = "0.3.24"
juniper = "0.15.7"
juniper_warp = "0.7.0"
# k8s-openapi = { version = "0.14", default-features = false, features = ["v1_23"] }
log = "0.4.21"
prost = "0.12.0"
rand = "0.8.5"
# rdkafka = { version = "0.31", features = ["cmake-build"] }
reqwest = { version = "0.11.27", features = ["rustls-tls-manual-roots"] }
scylla = "0.12.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = { version = "0.0.10", package = "serde_yml" }
tempfile = "3.10.1"
time = "0.3.16"
tokio = { version = "1.38.0", default-features = false, features = ["macros", "rt", "signal"] }
tokio-stream = "0.1.6"
tokio-tar = "0.3.0"
tokio-util = { version = "0.7.1", features = ["codec"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
warp = "0.3.0"

brane-cfg      = { path = "../brane-cfg" }
brane-prx      = { path = "../brane-prx" }
brane-shr      = { path = "../brane-shr" }
specifications = { path = "../specifications" }
