[package]
name = "brane-api"
rust-version = "1.74"
edition = "2021"
version.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-compression = { version = "0.3.15", features = ["tokio","gzip"] }
bytes = "1.2.0"
chrono = "0.4.35"
clap = { version = "4.5.6", features = ["derive","env"] }
dotenvy = "0.15"
enum-debug = { git = "https://github.com/Lut99/enum-debug", tag = "v1.0.0", features = ["derive"] }
env_logger = "0.10.0"
error-trace = { git = "https://github.com/Lut99/error-trace-rs", tag = "v2.0.0" }
futures = "0.3.24"
juniper = { version = "0.16.1", features = ["chrono"] }
juniper_warp = "0.8.0"
# k8s-openapi = { version = "0.14", default-features = false, features = ["v1_23"] }
log = "0.4.22"
prost = "0.12.0"
rand = "0.8.5"
# rdkafka = { version = "0.31", features = ["cmake-build"] }
reqwest = { version = "0.11.27", features = ["rustls-tls-manual-roots"] }
scylla = "0.12.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = { version = "0.0.10", package = "serde_yml" }
tempfile = "3.10.1"
time = "0.3.16"
tokio = { version = "1.38.0", default-features = false, features = ["macros", "rt", "signal"] }
tokio-stream = "0.1.6"
tokio-tar = "0.3.0"
tokio-util = { version = "0.7.1", features = ["codec"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
warp = "0.3.2"

brane-cfg      = { path = "../brane-cfg" }
brane-prx      = { path = "../brane-prx" }
brane-shr      = { path = "../brane-shr" }
specifications = { path = "../specifications" }
