[package]
name = "brane-ast-c"
version = { workspace = true }
edition = "2021"
authors = { workspace = true }
description = "Wrapper around `brane-ast` that provides C-bindings. This allows the BraneScript compiler to be used in `brane-ide`."


[lib]
name       = "brane_ast"
crate-type = ["rlib", "cdylib"]


[dependencies]
brane-ast = { path = "../brane-ast" }
