[package]
name = "brane-ast"
version = { workspace = true }
edition = "2021"
authors = [ "Tim Müller" ]
rust-version = "1.67.1"

[dependencies]
console = "0.15"
enum-debug = { git = "https://github.com/Lut99/enum-debug", features = ["derive"] }
im = "15.1"
lazy_static = "1.4.0"
log = "0.4"
rand = "0.8"
num-traits = "0.2"
serde = { version = "1", features = ["rc"] }
serde_json_any_key = "2.0.0"
strum = { version = "0.25", features = ["derive"] }
uuid = { version = "1.7", features = ["serde", "v4"] }

brane-dsl = { path = "../brane-dsl" }
brane-shr = { path = "../brane-shr" }
specifications = { path = "../specifications" }
