[package]
name = "brane-ast"
version = { workspace = true }
edition = "2021"
authors = [ "Tim Müller" ]

[dependencies]
console = "0.15.5"
enum-debug = { git = "https://github.com/Lut99/enum-debug", features = ["derive"] }
im = "15.1.0"
lazy_static = "1.4.0"
log = "0.4.17"
rand = "0.8.5"
num-traits = "0.2.18"
serde = { version = "1.0.195", features = ["rc"] }
serde_json_any_key = "2.0.0"
strum = { version = "0.25.0", features = ["derive"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }

brane-dsl = { path = "../brane-dsl" }
brane-shr = { path = "../brane-shr" }
specifications = { path = "../specifications" }
