[package]
name = "brane-ast"
version = { workspace = true }
edition = "2021"
authors = [ "Tim Müller" ]
rust-version = "1.73"

[dependencies]
console = "0.15.5"
enum-debug = { git = "https://github.com/Lut99/enum-debug", tag = "v1.0.0", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.22"
rand = "0.8.5"
num-traits = "0.2.18"
serde = { version = "1.0.204", features = ["rc"] }
serde_json_any_key = "2.0.0"
strum = { version = "0.25.0", features = ["derive"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }

brane-dsl = { path = "../brane-dsl" }
brane-shr = { path = "../brane-shr" }
specifications = { path = "../specifications" }
