[package]
name = "brane-cc"
version = { workspace = true }
edition = "2021"
authors = [ "Tim Müller" ]

[[bin]]
name = "branec"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.24", features = ["derive","env"] }
dotenvy = "0.15"
enum-debug = { git = "https://github.com/Lut99/enum-debug", features = ["derive"] }
humanlog = { git = "https://github.com/Lut99/humanlog-rs" }
human-panic = "1.0"
log = "0.4"
tokio = { version = "1", features = ["rt","macros"] }
url = "2.2"

brane-ast = { path = "../brane-ast" }
brane-dsl = { path = "../brane-dsl" }
brane-shr = { path = "../brane-shr" }
brane-tsk = { path = "../brane-tsk" }
serde_json = "1"
specifications = { path = "../specifications" }


[target.'cfg(unix)'.dependencies]
expanduser = "1.2.2"


# Hacky indeed but necessary to dodge OpenSSL linking, which we need to make cross-compilation _so_ much easier
[dependencies.openssl-sys]
version = "0.9"
features = ["vendored"]
