[package]
name = "brane-cc"
rust-version = "1.74"
edition = "2021"
authors = [ "Tim Müller" ]
version.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "branec"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.6", features = ["derive","env"] }
dotenvy = "0.15.0"
enum-debug = { git = "https://github.com/Lut99/enum-debug", tag = "v1.0.0", features = ["derive"] }
humanlog = { git = "https://github.com/Lut99/humanlog-rs", tag = "v0.1.0" }
human-panic = "2.0.0"
log = "0.4.22"
tokio = { version = "1.38.0", features = ["rt","macros"] }
url = "2.5.0"

brane-ast = { path = "../brane-ast" }
brane-dsl = { path = "../brane-dsl" }
brane-shr = { path = "../brane-shr" }
brane-tsk = { path = "../brane-tsk" }
serde_json = "1.0.120"
specifications = { path = "../specifications" }


[target.'cfg(unix)'.dependencies]
expanduser = "1.2.2"


# Hacky indeed but necessary to dodge OpenSSL linking, which we need to make cross-compilation _so_ much easier
[dependencies.openssl-sys]
version = "0.9.102"
features = ["vendored"]
