[package]
name = "brane-cfg"
version = { workspace = true }
authors = ["Onno Valkering", "Tim Müller"]
edition = "2018"

[dependencies]
async-trait = "0.1.67"
enum-debug = { git = "https://github.com/Lut99/enum-debug", features = ["derive"] }
log = "0.4.17"
rustls = "0.21.6"
rustls-pemfile = "1.0.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = { version = "0.0.10", package = "serde_yml" }
tokio = { version = "1.38.0", features = [] }
x509-parser = "0.15.0"

brane-shr      = { path = "../brane-shr" }
specifications = { path = "../specifications" }
