[package]
name = "brane-chk"
edition = "2021"
rust-version = "1.74"
version.workspace = true
repository.workspace = true
authors = ["Tim Müller", "Bas Kloosterman", "Daniel Voogsgerd"]
license.workspace = true


[dependencies]
rand = "0.8.5"
reqwest = "0.12.8"
serde = "1.0.204"
serde_json = "1.0.120"
thiserror = "1.0.61"
tracing = "0.1.40"

eflint-json = { git = "https://gitlab.com/eflint/json-spec-rs", branch = "incorrect-is-invariant" }
enum-debug = { git = "https://github.com/Lut99/enum-debug", tag = "v1.1.0" }
policy-reasoner = { git = "https://github.com/epi-project/policy-reasoner", branch = "lib-refactor", features = ["workflow"] }

brane-ast = { path = "../brane-ast" }
brane-cfg = { path = "../brane-cfg" }
brane-exe = { path = "../brane-exe" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }


[dev-dependencies]
humanlog = { git = "https://github.com/Lut99/humanlog-rs", tag = "v0.2.0" }
names = { git = "https://github.com/Lut99/names-rs", features = ["rand", "three"] }

brane-shr = { path = "../brane-shr" }


[features]
default = []
