[package]
name = "brane-cli-c"
version = { workspace = true }
edition = "2021"
authors = { workspace = true }
description = "Wrapper around `brane-cli` that provides C-bindings for interacting with a remote backend. This allows C-programs to act as a BRANE client."


[lib]
name       = "brane_cli"
crate-type = ["rlib", "cdylib"]


[dependencies]
humanlog = { git = "https://github.com/Lut99/humanlog-rs" }
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
serde_json = "1.0"
tokio = "1.28"

brane-ast = { path = "../brane-ast" }
brane-cli = { path = "../brane-cli" }
brane-exe = { path = "../brane-exe" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }
