[package]
name = "brane-cli-c"
version = { workspace = true }
edition = "2021"
authors = { workspace = true }
description = "Wrapper around `brane-cli` that provides C-bindings for interacting with a remote backend. This allows C-programs to act as a BRANE client."


[lib]
name       = "brane_cli"
crate-type = ["cdylib"]
doc        = false


[dependencies]
console = "0.15"
humanlog = { git = "https://github.com/Lut99/humanlog-rs" }
libc = "0.2"
log = "0.4"
parking_lot = "0.12"
serde_json = "1.0"
tokio = "1.28"

brane-ast = { path = "../brane-ast" }
brane-cli = { path = "../brane-cli" }
brane-exe = { path = "../brane-exe" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }


# [build-dependencies]
# cbindgen = "0.26"


# Hacky indeed but necessary to dodge OpenSSL linking, which we need to make cross-compilation _so_ much easier
[dependencies.openssl-sys]
version = "0.9"
features = ["vendored"]
