[package]
name = "brane-cli-c"
description = "Wrapper around `brane-cli` that provides C-bindings for interacting with a remote backend. This allows C-programs to act as a BRANE client."
rust-version = "1.74"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true


[lib]
name       = "brane_cli"
crate-type = ["cdylib"]
doc        = false


[dependencies]
console = "0.15.5"
humanlog = { git = "https://github.com/Lut99/humanlog-rs", tag = "v0.1.0" }
libc = "0.2.154"
log = "0.4.22"
parking_lot = "0.12.1"
serde_json = "1.0.120"
tokio = "1.38.0"

brane-ast = { path = "../brane-ast" }
brane-cli = { path = "../brane-cli" }
brane-exe = { path = "../brane-exe" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }


# [build-dependencies]
# cbindgen = "0.26"


# Hacky indeed but necessary to dodge OpenSSL linking, which we need to make cross-compilation _so_ much easier
[dependencies.openssl-sys]
version = "0.9.102"
features = ["vendored"]
