[package]
name = "brane-cli"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"
default-run = "brane"
rust-version = "1.74"

[[bin]]
name = "brane"
path = "src/main.rs"

[[bin]]
name = "brane-completions"
path = "src/completions.rs"
doc = false

[dependencies]
anyhow = "1.0.66"
async-compression = { version = "0.4", features = ["tokio","gzip"] }
async-trait = "0.1.67"
base64 = "0.21.0"
bollard = "0.14.0"
chrono = "0.4.35"
clap = { version = "4.5.6", features = ["derive","env"] }
console = "0.15.5"
dialoguer = "0.11.0"
dirs = "5.0.1"
dotenvy = "0.15.0"
enum-debug = { git = "https://github.com/Lut99/enum-debug", tag = "v1.0.0", features = ["derive"] }
error-trace = { git = "https://github.com/Lut99/error-trace-rs", tag = "v2.0.0" }
filetime = "0.2.15"
flate2 = { version = "1.0.13", features = ["zlib"], default-features = false }
fs_extra = "1.2.0"
futures = "0.3.24"
futures-util = "0.3.30"
# git2 = { version = "0.17", features = ["vendored-libgit2"] }
graphql_client = "0.13.0"
humanlog = { git = "https://github.com/Lut99/humanlog-rs", tag = "v0.1.0" }
human-panic = "2.0.0"
hyper = "0.14.29"
indicatif = "0.17.0"
lazy_static = "1.4.0"
log = "0.4.22"
names = { git = "https://github.com/Lut99/names-rs", tag = "v0.1.0", default-features = false, features = ["rand", "three-lowercase"]}
openapiv3 = "0.5.0"
parking_lot = "0.12.1"
path-clean = "1.0.0"
prettytable-rs = "0.10.0"
rand = "0.8.5"
reqwest = {version = "0.11.27", features = ["rustls-tls-manual-roots","json", "stream", "multipart"] }
rustls = "0.21.6"
rustyline = "11.0.0"
rustyline-derive = "0.8.0"
semver = "1.0.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_with = "3.0.0"
serde_yaml = { version = "0.0.10", package = "serde_yml" }
tar = "0.4.21"
tempfile = "3.10.1"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.6"
tokio-tar = "0.3.0"
tokio-util = { version = "0.7.1", features = ["codec"] }
tonic = "0.11.0"
url = "2.5.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
x509-parser = "0.15.0"

brane-ast = { path = "../brane-ast" }
brane-cfg = { path = "../brane-cfg" }
brane-dsl = { path = "../brane-dsl" }
brane-exe = { path = "../brane-exe" }
brane-shr = { path = "../brane-shr" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }
clap_complete = "4.5.8"


# Hacky indeed but necessary to dodge OpenSSL linking, which we need to make cross-compilation _so_ much easier
[dependencies.openssl-sys]
version = "0.9.102"
features = ["vendored"]


[features]
print_exec_path = [ "brane-exe/print_exec_path" ]
