[package]
name = "brane-ctl"
version = { workspace = true }
edition = "2021"
authors = [ "Tim Müller" ]

[[bin]]
name = "branectl"
path = "src/main.rs"

[dependencies]
base64ct = "1.6"
bollard = "0.14"
clap = { version = "4.0.24", features = ["derive","env"] }
console = "0.15"
dialoguer = "0.11"
diesel = { version = "2.1", features = ["sqlite"] }
diesel_migrations = "2.1"
dirs-2 = "3.0"
dotenvy = "0.15"
eflint-to-json = { git = "https://github.com/epi-project/policy-reasoner" }
enum-debug = { git = "https://github.com/Lut99/enum-debug", features = ["derive"] }
error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
# env_logger = "0.10"
hex-literal = "0.4"
humanlog = { git = "https://github.com/Lut99/humanlog-rs" }
humantime = "2.1"
human-panic = "1.0"
jsonwebtoken = "9.2"
lazy_static = "1.4.0"
log = "0.4"
names = { git = "https://github.com/Lut99/names-rs", default-features = false, features = [ "rand", "three-lowercase" ]}
policy = { git = "https://github.com/epi-project/policy-reasoner" }
srv = { git = "https://github.com/epi-project/policy-reasoner" }
rand = "0.8"
reqwest = { version = "0.11" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
shlex = "1.1.0"
tempfile = "3.3.0"
tokio = { version = "1", features = [] }

brane-cfg = { path = "../brane-cfg" }
brane-shr = { path = "../brane-shr" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }


# Hacky indeed but necessary to dodge OpenSSL linking, which we need to make cross-compilation _so_ much easier
[dependencies.openssl-sys]
version = "0.9"
features = ["vendored"]


[build-dependencies]
download = { git = "https://github.com/Lut99/download-rs", default-features = false, features = ["download"] }
hex-literal = "0.4"

[lints.clippy]
result_large_err = { level = "allow", priority = 1 }
