[package]
name = "brane-drv"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"

[dependencies]
async-trait = "0.1"
clap = { version = "4.0.24", features = ["derive","env"] }
dashmap = "5.4"
dotenvy = "0.15"
enum-debug = { git = "https://github.com/Lut99/enum-debug", features = ["derive"] }
env_logger = "0.10"
error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
futures-util = "0.3"
log = "0.4"
prost = "0.12"
# rdkafka = { version = "0.31", features = ["cmake-build"] }
reqwest = { version = "0.11" }
serde_json = "1"
serde_json_any_key = "2.0.0"
tokio = { version = "1", default-features = false, features = ["macros", "rt", "signal"] }
tokio-stream = "0.1"
tonic = "0.11"

brane-ast = { path = "../brane-ast" }
brane-cfg = { path = "../brane-cfg" }
brane-exe = { path = "../brane-exe" }
brane-prx = { path = "../brane-prx" }
brane-shr = { path = "../brane-shr" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }
