[package]
name = "brane-drv"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"
rust-version = "1.74"

[dependencies]
async-trait = "0.1.67"
clap = { version = "4.5.6", features = ["derive","env"] }
dashmap = "5.4.0"
dotenvy = "0.15.0"
enum-debug = { git = "https://github.com/Lut99/enum-debug", tag = "v1.0.0", features = ["derive"] }
env_logger = "0.10.0"
error-trace = { git = "https://github.com/Lut99/error-trace-rs", tag = "v2.0.0" }
futures-util = "0.3.30"
log = "0.4.22"
prost = "0.12.0"
# rdkafka = { version = "0.31", features = ["cmake-build"] }
reqwest = { version = "0.11.27" }
serde_json = "1.0.120"
serde_json_any_key = "2.0.0"
tokio = { version = "1.38.0", default-features = false, features = ["macros", "rt", "signal"] }
tokio-stream = "0.1.6"
tonic = "0.11.0"

brane-ast = { path = "../brane-ast" }
brane-cfg = { path = "../brane-cfg" }
brane-exe = { path = "../brane-exe" }
brane-prx = { path = "../brane-prx" }
brane-shr = { path = "../brane-shr" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }
