[package]
name = "brane-dsl"
rust-version = "1.73"
edition = "2018"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bytes = "1.2.0"
enum-debug = { git = "https://github.com/Lut99/enum-debug", tag = "v1.0.0", features = ["derive"] }
log = "0.4.22"
nom = "7.1.0"
nom_locate = "4.1.0"
rand = "0.8.5"
regex = "1.5.0"
semver = "1.0.0"
serde = "1.0.204"
serde_json = "1.0.120"
thiserror = "1.0.40"

brane-shr = { path = "../brane-shr" }
specifications = { path = "../specifications" }
