[package]
name = "brane-dsl"
version = { workspace = true }
authors = { workspace = true }
edition = "2018"
rust-version = "1.73"

[dependencies]
bytes = "1.2.0"
enum-debug = { git = "https://github.com/Lut99/enum-debug", tag = "v1.0.0", features = ["derive"] }
log = "0.4.22"
nom = "7.1.0"
nom_locate = "4.1.0"
rand = "0.8.5"
regex = "1.5.0"
semver = "1.0.0"
serde = "1.0.204"
serde_json = "1.0.120"
thiserror = "1.0.40"

brane-shr = { path = "../brane-shr" }
specifications = { path = "../specifications" }
