[package]
name = "brane-exe"
version = { workspace = true }
edition = "2021"
authors = [ "Tim Müller" ]

[dependencies]
async-recursion = "1.0.0"
async-trait = "0.1.67"
base64 = "0.13.0"
# bollard = "0.11"
console = "0.15.5"
enum-debug = { git = "https://github.com/Lut99/enum-debug", features = ["derive"] }
futures = "0.3.24"
lazy_static = "1.4.0"
log = "0.4.21"
num-traits = "0.2.18"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = [] }
uuid = { version = "1.7.0", features = ["fast-rng", "serde", "v4"] }

brane-ast = { path = "../brane-ast" }
brane-shr = { path = "../brane-shr" }
specifications = { path = "../specifications" }

[dev-dependencies]
simplelog = "0.12.0"

brane-shr = { path = "../brane-shr" }

[features]
print_exec_path = []
test_logging    = []
