[package]
name = "brane-exe"
version = { workspace = true }
edition = "2021"
authors = [ "Tim Müller" ]
rust-version = "1.73"

[dependencies]
async-recursion = "1.0.0"
async-trait = "0.1.67"
base64 = "0.13.0"
# bollard = "0.11"
console = "0.15.5"
enum-debug = { git = "https://github.com/Lut99/enum-debug", tag = "v1.0.0", features = ["derive"] }
futures = "0.3.24"
lazy_static = "1.4.0"
log = "0.4.22"
num-traits = "0.2.18"
serde = "1.0.204"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = [] }
uuid = { version = "1.7.0", features = ["fast-rng", "serde", "v4"] }

brane-ast = { path = "../brane-ast" }
brane-shr = { path = "../brane-shr" }
specifications = { path = "../specifications" }

[dev-dependencies]
humanlog = { git = "https://github.com/Lut99/humanlog-rs", tag = "v0.1.0" }
brane-shr = { path = "../brane-shr" }

[features]
print_exec_path = []
test_logging    = []
