[package]
name = "brane-job"
version = { workspace = true }
authors = { workspace = true }
edition = "2018"

[dependencies]
base64 = "0.21.0"
bollard = "0.14.0"
chrono = "0.4.23"
clap = { version = "4.4.0", features = ["derive","env"] }
deliberation = { git = "https://github.com/epi-project/policy-reasoner" }
dotenvy = "0.15.0"
enum-debug = { git = "https://github.com/Lut99/enum-debug", features = ["derive"] }
env_logger = "0.10.0"
error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
futures-util = "0.3.30"
hyper = "0.14.29"
# kube = { version = "0.82", default_features = false, features = ["client"] }
# k8s-openapi = { version = "0.18", default_features = false, features = ["v1_23"] }
log = "0.4.21"
reqwest = { version = "0.11.27", features = ["rustls-tls-manual-roots","json","stream","multipart"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_json_any_key = "2.0.0"
serde_yaml = { version = "0.0.10", package = "serde_yml" }
tokio = { version = "1.38.0", default-features = false, features = ["rt", "macros", "signal"] }
tokio-stream = "0.1.6"
tonic = "0.11.0"

brane-ast = { path = "../brane-ast" }
brane-cfg = { path = "../brane-cfg" }
brane-exe = { path = "../brane-exe" }
brane-prx = { path = "../brane-prx" }
brane-shr = { path = "../brane-shr" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }

[dev-dependencies]
dashmap = "4.0.0"
